# ai_repo

custom_nodes/Bond-Node-Suite/: LICENSE.txt  README.md  __init__.py
custom_nodes/ComfyUI-Workflow-Encrypt/: README.md  __init__.py  pyproject.toml
custom_nodes/csv_qwen_suite/: __init__.py  pyproject.toml
custom_nodes/csv_qwen_suite/CSV Files/: 80_full_body_prompts.csv  candid_realism.csv  centerfold_edition.csv  detail_shots.csv  face_closeups.csv  female_carousel.csv  female_gym_100_prompts.csv  female_gym_carousel.csv  female_lingerie_carousel.csv  female_masterb_image_prompt.csv  female_nude_Shots.csv  fullbody_structure.csv  hair_control.csv  implied_versions.csv  karma_Nude_loRa_photo_prompts.csv  karma_face_closeups.csv  karma_fanvue_7day_intimate_prompts.csv  karma_realism_prompt_set_200.csv  karma_sfw_day_in_life_selfies_100_prompts.csv  karma_sfw_gym_100_prompts.csv  karma_swimsuit_prompts.csv  krea2_wardrobe_malfunction_prompts.csv  lingerie_prompts.csv  midshot_anatomy.csv  qwen_zit_identity_generation_prompts_25.csv  swimsuit_prompts.csv
custom_nodes/csv_qwen_suite/src/: __init__.py  nodes.py
custom_nodes/csv_qwen_suite/tests/: Lora_Character_creation.csv  Nude_loRa_photo_prompts  README.md  Raven_prompts.csv  example.csv  female_influencer_200_prompts.csv  female_masturbation_images.csv  karma_Nude_loRa_photo_prompts.csv  karma_gym_poses.csv  karma_sfw_day_in_life_selfies_100_prompts.csv  karma_sfw_gym_100_prompts.csv  qwen2511_hacker_girl_lora_positive_negative.csv  test_nodes.py  trigger_blank_gym_poses.csv  updated_selfie_prompts_150_no_blonde.csv
(+30 files in other folders)
