[project]
name = "csv-qwen-suite"
version = "0.1.0"
description = "ComfyUI custom nodes: CSV-driven prompt + seed iterator for Qwen Image Edit workflows."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Matt + ChatGPT"}]

[project.urls]
Homepage = "https://example.invalid"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
